--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -1,8 +1,10 @@
+@base: #f938ab;
 /* Space out content a bit */
 body {
   padding-top: 20px;
   padding-bottom: 20px;
 }
+
 /* Everything but the jumbotron gets side spacing for mobile first views */
 .header,
 .marketing,
@@ -10,6 +12,7 @@ body {
   padding-left: 15px;
   padding-right: 15px;
 }
+
 /* Custom page header */
 .header {
   border-bottom: 1px solid #e5e5e5;
@@ -21,12 +24,14 @@ body {
   line-height: 40px;
   padding-bottom: 19px;
 }
+
 /* Custom page footer */
 .footer {
   padding-top: 19px;
   color: #777;
   border-top: 1px solid #e5e5e5;
 }
+
 /* Customize container */
 @media (min-width: 768px) {
   .container {
@@ -36,6 +41,7 @@ body {
 .container-narrow > hr {
   margin: 30px 0;
 }
+
 /* Main marketing message and sign up button */
 .jumbotron {
   text-align: center;
@@ -45,6 +51,7 @@ body {
   font-size: 21px;
   padding: 14px 24px;
 }
+
 /* Supporting marketing content */
 .marketing {
   margin: 40px 0;
@@ -52,6 +59,7 @@ body {
 .marketing p + h4 {
   margin-top: 28px;
 }
+
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
   /* Remove the padding we set earlier */
@@ -70,11 +78,17 @@ body {
     border-bottom: 0;
   }
 }
-.box {
-  color: #fe33ac;
-  border-color: #fdcdea;
+
+
+.box-shadow(@style, @c) when (iscolor(@c)) {
+  -webkit-box-shadow: @style @c;
+  box-shadow:         @style @c;
 }
-.box div {
-  -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+.box-shadow(@style, @alpha: 50%) when (isnumber(@alpha)) {
+  .box-shadow(@style, rgba(0, 0, 0, @alpha));
+}
+.box {
+  color: saturate(@base, 5%);
+  border-color: lighten(@base, 30%);
+  div { .box-shadow(0 0 5px, 30%) }
 }
