--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -78,3 +78,6 @@ body {
   -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
 }
+.sortable {
+  cursor: move;
+}
