--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -99,3 +99,10 @@ body {
   
   cursor: move;
 }
+
+
+.gridStyle {
+    border: 1px solid rgb(212,212,212);
+    width: 400px; 
+    height: 300px
+}
