--- a/app/views/manager/survey-list.html
+++ b/app/views/manager/survey-list.html
@@ -1,5 +1,5 @@
 <h1>Survey List</h1>
 
 <button class="btn btn-success" ng-click="showModal()"> Add New Survey</button>
-<div class="gridStyles" ng-grid="gridOptions">
+<div class="gridStyle" ng-grid="gridOptions">
 </div>
