--- a/app/views/manager/add-survey.html
+++ b/app/views/manager/add-survey.html
@@ -27,7 +27,7 @@
                         </span>
                         <span class="preview" data-file-upload-preview="answer.data.files[0]" ng-if="!!answer.data.files[0]">
                         </span>
-                        <img ng-src="{{'images/'+answer.imgname}}" ng-if="!answer.data.files[0]&&!!answer.imgname"/>
+                        <img ng-src="{{surveyProvier.getAnswerImageUrl(answer)}}" ng-if="!answer.data.files[0]&&!!answer.imgname"/>
 
                     </span>
                 </div>
@@ -38,10 +38,10 @@
         </div>
 
     </div>
-
+    <input type="checkbox" ng-model="currentSurvey.isInSinglePage" />In single page
     <button type="button" class="btn btn-success" ng-click="addNewQuestion()">Add New Question</button>
     <button type="button" class="btn btn-success" ng-click="save()">Save</button>
-
+    <button type="button" class="btn btn-success" ng-click="preview()">Preview</button>
 
 
 
