--- a/app/views/response.html
+++ b/app/views/response.html
@@ -1,13 +1,52 @@
-<wizard on-finish="finishedWizard()" hide-indicators="true" current-step="currentStep"> 
+
+<wizard on-finish="finish()" hide-indicators="true" current-step="data.currentStep" ng-show="!currentSurvey.isInSinglePage" >
     <wz-step title="{{question.title}}" ng-repeat="question in currentSurvey.questions" ng-init="questionIndex = $index">
         <h1>{{question.title}}</h1>
-        <div ng-repeat="answer in question.answers" ng-init="answerIndex = $index">
-        	<input type="checkbox"  ng-model="response[questionIndex][answerIndex]" value="{{answerIndex}}" ng-if="!!question.isMultipleAnswer"/> 
-        	<input type="radio"  ng-model="response[questionIndex]" value="{{answerIndex}}" ng-if="!question.isMultipleAnswer"/>
-        	{{answer.text}}
+        <div ng-if="!question.isDisplayImage">
+            <div ng-repeat="answer in question.answers" ng-init="answerIndex = $index">
+                <input type="checkbox" ng-model="response[questionIndex][answerIndex]" value="{{answerIndex}}" ng-if="!!question.isMultipleAnswer" />
+                <input type="radio" ng-model="response[questionIndex]" value="{{answerIndex}}" ng-if="!question.isMultipleAnswer" />{{answer.text}}
+            </div>
         </div>
-        <button type="button" class="btn btn-success" wz-previous ng-if="!isFirstStep()">previous </button>
-        <button type="button" class="btn btn-success" wz-next ng-if="!isLastStep()">next</button>
+        <div class="row" ng-if="!!question.isDisplayImage">
+
+            <div class="col-md-4" ng-repeat="answer in question.answers" ng-init="answerIndex = $index">
+                <img class="thumbnail" ng-src="{{surveyProvier.getAnswerImageUrl(answer)}}">
+                <input type="checkbox" ng-model="response[questionIndex][answerIndex]" value="{{answerIndex}}" ng-if="!!question.isMultipleAnswer" />
+                <input type="radio" ng-model="response[questionIndex]" value="{{answerIndex}}" ng-if="!question.isMultipleAnswer" />{{answer.text}}
+            </div>
+
+
+        </div>
+        <div class="row">
+            <button type="button" class="btn btn-success" wz-previous ng-disabled="isFirstStep()">previous</button>
+            <button type="button" class="btn btn-success" wz-next>next</button>
+        </div>
     </wz-step>
-    
+
 </wizard>
+
+
+<div ng-show="!!currentSurvey.isInSinglePage">
+    <div ng-repeat="question in currentSurvey.questions" ng-init="questionIndex = $index">
+        <h1>{{question.title}}</h1>
+        <div ng-if="!question.isDisplayImage">
+            <div ng-repeat="answer in question.answers" ng-init="answerIndex = $index">
+                <input type="checkbox" ng-model="response[questionIndex][answerIndex]" value="{{answerIndex}}" ng-if="!!question.isMultipleAnswer" />
+                <input type="radio" ng-model="response[questionIndex]" value="{{answerIndex}}" ng-if="!question.isMultipleAnswer" />{{answer.text}}
+            </div>
+        </div>
+        <div class="row" ng-if="!!question.isDisplayImage">
+
+            <div class="col-md-4" ng-repeat="answer in question.answers" ng-init="answerIndex = $index">
+                <img class="thumbnail" ng-src="{{surveyProvier.getAnswerImageUrl(answer)}}">
+                <input type="checkbox" ng-model="response[questionIndex][answerIndex]" value="{{answerIndex}}" ng-if="!!question.isMultipleAnswer" />
+                <input type="radio" ng-model="response[questionIndex]" value="{{answerIndex}}" ng-if="!question.isMultipleAnswer" />{{answer.text}}
+            </div>
+
+
+        </div>
+
+    </div>
+    <button type="button" class="btn btn-success" ng-click="finish()">finish</button>
+</div>
