--- a/app/views/manager/add-survey.html
+++ b/app/views/manager/add-survey.html
@@ -18,7 +18,7 @@
                     <input type="text" ng-model="answer.text" />
                     <i class="fa fa-plus" ng-click="addAnswerAfter(question,answer)"></i> 
                     <i class="fa fa-times" ng-click="removeThisAnswer(question,answer)"></i> 
-                    <span data-file-upload="options" style="position:relative ;display:inline-block" >
+                    <span data-file-upload="options" >
                         <!-- The fileinput-button span is used to style the file input field as button -->
                         <span class="fa fa-upload fileinput-button" ng-class="{disabled: disabled}">
 
@@ -32,7 +32,7 @@
                         <img ng-src="{{surveyProvier.getAnswerImageUrl(answer)}}" ng-show="!answer.data.files[0]&&!!answer.imgname" ng-mouseover="showImageRemove=true" ng-mouseleave="showImageRemove=false" />
 
 
-                        <i class="fa fa-minus-circle" ng-mouseover="showImageRemove=true" ng-show="showImageRemove && (!!answer.data.files[0]||!!answer.imgname)" style="top: 5px; right: 5px; position: absolute;color: red;    text-shadow: 1px 1px 1px #ccc;    font-size: 1.0em;" ng-click="removeImage(answer)"></i>
+                        <i class="fa fa-minus-circle" ng-mouseover="showImageRemove=true" ng-show="showImageRemove && (!!answer.data.files[0]||!!answer.imgname)" style="left: -20px; top: -40px; color: red; font-size: 1em; position: relative; text-shadow: 1px 1px 1px #ccc;" ng-click="removeImage(answer)"></i>
                     </span>
                 </div>
             </div>
